--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         </div>
         <div id="game" class="row justify-content-center text-center align-items-center hide">
 
-            <div class="col-sm-12  col-sm-1">
+            <div class="col-sm-12">
                 <p class="lead" id="question">What is the question?</p>
                 <p class="lead" id="gameplay"></p>
+                <img id="image" class="img-fluid" src="" />
 
 
             </div>
