--- a/index copy.html
+++ b/index copy.html
@@ -20,7 +20,7 @@
 <body>
 
 
-    <title>Movie Trivia</title>
+    <title>World Geography Trivia Game</title>
     <!--<section class="jumbotron-fluid">
         <h1 id="main-message" class="display-4">Movie Trivia</h1>
         <p class="lead">Test your knowledge of X and Y!</p>
@@ -37,9 +37,10 @@
         </div>
         <div id="game" class="row justify-content-center text-center align-items-center hide">
 
-            <div class="col-sm-12  col-sm-1">
+            <div class="col-sm-12">
                 <p class="lead" id="question">What is the question?</p>
                 <p class="lead" id="gameplay"></p>
+                <img id="image" class="img-fluid" src="" />
 
 
             </div>
