--- a/index copy.html
+++ b/index copy.html
@@ -55,13 +55,13 @@
                     <div class="col-sm-12 ">
                         <span id="counter"></span>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-sm-4">
                         <p id="answer-1" class="answer btn btn-info col">ANSWER 1</p>
                         <p id="answer-2" class="answer btn btn-primary col">ANSWER 2</p>
 
                     </div>
 
-                    <div class="col-6">
+                    <div class="col-6 col-sm-4">
                         <p id="answer-3" class="answer btn btn-warning col">ANSWER 3</p>
                         <p id="answer-4" class="answer btn btn-success col">ANSWER 4</p>
                     </div>
